tests/snapshots/integration_tests__example_primitives_operations.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron AttentionScore(dim):
  inputs:
    query: [batch, seq, dim]
    key: [batch, seq, dim]
  outputs:
    default: [batch, seq, seq]
  graph:
    (query, key) -> MatMul#7()
    MatMul#7() -> out

neuron Bias(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  impl:
    Source: core,builtin/Bias

neuron ComplexOperation(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (path1, path2)
    path1 -> Linear#13(dim, dim)
    Linear#13(dim, dim) -> Bias#14(dim)
    Bias#14(dim) -> Scale#15(dim)
    Scale#15(dim) -> p1_out
    path2 -> Scale#16(dim)
    Scale#16(dim) -> p2_out
    (p1_out, p2_out) -> Multiply#17()
    Multiply#17() -> Add#18()
    Add#18() -> out

neuron Einsum(equation):
  inputs:
    a: [*shape_a]
    b: [*shape_b]
  outputs:
    default: [*shape_out]
  impl:
    Source: core,builtin/Einsum

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron GatedUnit(dim, hidden_dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (gate_path, value_path)
    gate_path -> Linear#2(dim, hidden_dim)
    Linear#2(dim, hidden_dim) -> SiLU#3()
    SiLU#3() -> gate
    value_path -> Linear#4(dim, hidden_dim)
    Linear#4(dim, hidden_dim) -> value
    (gate, value) -> Multiply#5()
    Multiply#5() -> Linear#6(hidden_dim, dim)
    Linear#6(hidden_dim, dim) -> out

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron LinearWithBias(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  graph:
    in -> Linear#8(in_dim, out_dim)
    Linear#8(in_dim, out_dim) -> Bias#9(out_dim)
    Bias#9(out_dim) -> out

neuron MatMul:
  inputs:
    a: [*, m, k]
    b: [*, k, n]
  outputs:
    default: [*, m, n]
  impl:
    Source: core,builtin/MatMul

neuron Multiply:
  inputs:
    a: [*shape]
    b: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Multiply

neuron ResidualAdd(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (main, skip)
    main -> Linear#0(dim, dim)
    Linear#0(dim, dim) -> processed
    (processed, skip) -> Add#1()
    Add#1() -> out

neuron Scale(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  impl:
    Source: core,builtin/Scale

neuron SiLU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/SiLU

neuron WeightedResidual(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (main, skip)
    main -> Linear#10(dim, dim)
    Linear#10(dim, dim) -> processed
    processed -> Scale#11(dim)
    Scale#11(dim) -> scaled
    (scaled, skip) -> Add#12()
    Add#12() -> out
