tests/snapshots/integration_tests__example_primitives_structural.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron ClassificationHead(feature_dim, num_classes):
  inputs:
    default: [batch, h, w, feature_dim]
  outputs:
    default: [batch, num_classes]
  graph:
    in -> Flatten#6()
    Flatten#6() -> Linear#7(((h * w) * feature_dim), num_classes)
    Linear#7(((h * w) * feature_dim), num_classes) -> out

neuron Concat:
  inputs:
    *inputs: [*shape]
  outputs:
    default: [*shape_out]
  impl:
    Source: core,builtin/Concat

neuron ConditionalProcessor:
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> match:
      [*, d] where (d > 512): Linear#8(d, 512) -> out
      [*, d]: Identity#9() -> out

neuron Flatten:
  inputs:
    default: [batch, *dims]
  outputs:
    default: [batch, flattened]
  impl:
    Source: core,builtin/Flatten

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron Fork3:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
    c: [*shape]
  impl:
    Source: core,builtin/Fork3

neuron Identity:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Identity

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron Pad(padding):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Pad

neuron Reshape(target_shape):
  inputs:
    default: [*shape]
  outputs:
    default: [target_shape]
  impl:
    Source: core,builtin/Reshape

neuron ResidualBlock(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (main, skip)
    main -> Linear#0(dim, dim)
    Linear#0(dim, dim) -> processed
    (processed, skip) -> Add#1()
    Add#1() -> out

neuron Slice(dim, start, end):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Slice

neuron Split(dim, sizes):
  inputs:
    default: [*shape]
  outputs:
    parts: [*shape]
  impl:
    Source: core,builtin/Split

neuron ThreePathProcessor(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, (dim * 3)]
  graph:
    in -> (p1, p2, p3)
    p1 -> Linear#2(dim, dim)
    Linear#2(dim, dim) -> out1
    p2 -> Linear#3(dim, dim)
    Linear#3(dim, dim) -> out2
    p3 -> Linear#4(dim, dim)
    Linear#4(dim, dim) -> out3
    (out1, out2, out3) -> Concat#5()
    Concat#5() -> out

neuron Transpose(dim0, dim1):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Transpose
